<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    tools:ignore="ExtraText">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

        <TextView

            android:id="@+id/tv_createNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="20dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="5dp"
            android:autofillHints="" />

    <EditText

            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:autofillHints="@string/email" />

        <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/phone_01"
                android:padding="5dp"
                android:inputType="phone"
            android:autofillHints="@string/phone_01" />

        <EditText

            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:padding="5dp"
            android:inputType="textPassword"
            android:autofillHints="@string/password" />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/confirmpassword"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button

        android:id="@+id/btn_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttonshapecolor"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/tv_tologinActivty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="95dp"
        android:textColor="@color/colorBlue"
        android:text="Already registered ? Log in here" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="20dp"/>

    </LinearLayout>
